test/types/range/nonIntTypes/realRange.good
realRange.chpl:1: error: Bounds of 'low..high' must be integers of compatible types.
